kustomize/bases/sockshop/front-end/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ing
spec:
  rules:
  - host: SOCKSHOP_DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: front-end
          servicePort: 80
